--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -27,7 +27,7 @@ jobs:
           node-version-file: '.tool-versions'
           cache: 'yarn'
       - run: yarn install --frozen-lockfile
-      - run: yarn prettier
+      - run: yarn format
   test:
     runs-on: ubuntu-latest
     steps:
