ci: configure commitlint

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "url": "https://github.com/huntclub/eslint-plugin-hunt-club/issues"
   },
   "homepage": "https://github.com/huntclub/eslint-plugin-hunt-club#readme",
-  "files": ["dist/**/*"],
+  "files": [
+    "dist/**/*"
+  ],
   "author": "Mark Faga <mark.faga@huntclub.com>",
   "keywords": [
     "eslint",
@@ -43,6 +45,8 @@
     "@babel/core": "^7.21.5",
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-typescript": "^7.21.5",
+    "@commitlint/cli": "^17.6.1",
+    "@commitlint/config-conventional": "^17.6.1",
     "@types/eslint": "^8.37.0",
     "@types/jest": "^29.5.1",
     "@types/node": "^18.16.3",
